metabase/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  namespace: xconnected
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
      - name: metabase
        image: metabase/metabase:latest
        volumeMounts:
        - name: metabase-data
          mountPath: /metabase-data
      volumes:
      - name: metabase-data
        persistentVolumeClaim:
          claimName: metabase-pvc
