metabase/service.yml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: xconnected
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: metabase
  type: ClusterIP
