metabase/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metabase-ingress
  namespace: xconnected
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: xconnected-mb-engine-rewrite@kubernetescrd
spec:
  rules:
  - 
    http:
      paths:
      - path: /mb_engine
        pathType: Prefix
        backend:
          service:
            name: metabase
            port:
              number: 3000
